# CIFAR_Classif

./: README.md  requirements.txt
CIFAR_Classif/: Makefile  README.md  data_preprocess.py  generic_classifier.py  generic_features_extractor.py  pyproject.toml  requirements.txt  setup.py
CIFAR_Classif/CIFAR_Classif/: bovw.py  data_preprocess.py  generic_classifier.py  generic_features_extractor.py  metrics.py  setup.py
CIFAR_Classif/notebooks/: demo_cifar_classif.ipynb
