[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "CIFAR_Classif"
version = "0.0.1"
description = "A classification for the CIFAR dataset"
authors = [
  { name = "Vincent Tardieux" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["CIFAR_Classif"]
force_sort_within_sections = true
